src/components/ForecastTable/ForecastTable.css
.forecast-table {
  font-size: 14px;
  margin-top: 20px;
  display: flex;
}

@media (max-width: 1200px) {
  /* disregard gutter for the table on mobile */
  .forecast-table {
    margin-left: -12px;
  }
}

.row {
  display: flex;
}

.row.data-point {
  height: 31px;
}

.forecast-data {
  overflow-x: auto;
  padding-bottom: 20px; /* TODO: remove this */
}

.forecast-table .cell {
  /* increased width to support 3 digits */
  width: 26px;
  height: 27px;
  flex-shrink: 0;
  text-align: center;
  padding-bottom: 3px;
  padding-top: 3px;
}

.forecast-table .cell.border {
  border-bottom-width: 5px;
  border-bottom-style: solid;
  margin-top: 4px;
}

/* adds better spacing for the arrows */
.forecast-table .cell.border.wind-direction {
  margin-top: 2px;
  padding-bottom: 5px;
}

.forecast-table .y-headers {
  width: 30px;
  flex-shrink: 0;
  text-align: center;
}

.forecast-table .y-header {
  height: 31px;
  padding-top: 6px;
}

.forecast-table .tod {
  border-bottom-color: #00000000;
  background-color: #1a4c82;
}

.forecast-table .dow {
  width: 624px; /* 26px * 24 hours */
  text-align: center;
  border-right: 1px solid #ebebeb;
  flex-shrink: 0;
  height: 24px;
  padding: 3px;
  background-color: #1a4c82;
}

.forecast-data .dow:last-child {
  border-right: none;
}

.forecast-table .icon {
  height: 16px;
}

